--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@iconify/react": "^3.2.2",
     "@mui/icons-material": "^5.8.3",
     "@mui/material": "^5.8.3",
     "next": "12.1.6",
