--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@mui/material": "^5.8.3",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-media-player": "^0.7.9",
+    "react-media-viewer": "^1.1.2",
+    "react-player": "^2.10.1"
   },
   "devDependencies": {
     "@zeit/next-css": "^1.0.1",
