--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "14.17.4"
+    "node": "14.17.4",
+    "npm" : "6.14.14"
   },
   "scripts": {
     "dev": "next dev",
