--- a/package.json
+++ b/package.json
@@ -2,10 +2,6 @@
   "name": "nextlearn",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": "14.17.4",
-    "npm" : "6.14.14"
-  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -20,10 +16,7 @@
     "@mui/material": "^5.8.3",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-media-player": "^0.7.9",
-    "react-media-viewer": "^1.1.2",
-    "react-player": "^2.10.1"
+    "react-dom": "18.1.0"
   },
   "devDependencies": {
     "@zeit/next-css": "^1.0.1",
