--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "nextlearn",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "14.17.4",
+    "npm": "8.13.2"
+    
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
