--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "engines": {
     "node": "14.17.4",
     "npm": "8.13.2"
-    
   },
   "scripts": {
     "dev": "next dev",
@@ -21,7 +20,8 @@
     "@mui/material": "^5.8.3",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-player": "^2.10.1"
   },
   "devDependencies": {
     "@zeit/next-css": "^1.0.1",
