--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-material-ui-carousel": "^3.4.2",
     "react-player": "^2.10.1"
   },
   "devDependencies": {
